--- a/index.html
+++ b/index.html
@@ -24,5 +24,8 @@
 
 
     <script src="script.js"></script>
+    <div class="footer">
+        <p>created by @fayaz-ui by ❤️</p>
+    </div>
 </body>
 </html>
