changes some color in css

--- a/index.html
+++ b/index.html
@@ -20,12 +20,11 @@
             </div>
         </div>
         <button class="btn" id="btn">Convert</button>
+        
     </div>
-
-
-    <script src="script.js"></script>
     <div class="footer">
-        <p>created by @fayaz-ui by ❤️</p>
+        <p>created by <a href="https://github.com/fayaz-ui">@fayaz-ui</a> by ❤️</p>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
